FIX: song content spacing

--- a/css/app.css
+++ b/css/app.css
@@ -19,6 +19,9 @@ html{
 img{
     width: 100%;
 }
+.round-img{
+    border-radius: 100%;
+}
 /* LAYOUT */
 .main-container{
     height: 100vh;
@@ -59,6 +62,7 @@ img{
     flex-grow: 1;
     overflow-y: scroll;
     height: 100%;
+    padding-bottom: 20px;
 }
 .btn{
     border: 1px solid;
@@ -182,7 +186,12 @@ img{
     text-align: center;
     color:  #74767b;
     max-width: 175px;
+    padding: 10px 0px;
 }
+.song-list img{
+    padding-top: 10px;
+}
+ 
 
 /* PLAYER STYLE */
 
@@ -313,6 +322,9 @@ img{
 .padding-top-10{
     padding-top: 10px;
 }
+.padding-bottom-10{
+    padding-bottom: 10px;
+}
 /* MEDIA QUERIES */
 @media (max-width:878px) {
 
@@ -332,7 +344,9 @@ img{
         gap: 10px;
         margin-right:10px ;
     }
-    
+    .sidebar{
+        overflow: visible;
+    }
 }
 @media (max-width:552px){
     .volume{
@@ -355,10 +369,14 @@ img{
     }
     .logo-responsive{
         display: block;
-        
+        margin-top: 20px;
     }
-    .sidebar h2,.download,.profile,.user-playlist,.create{
+    .sidebar h2,.download,.user,.user-playlist,.create{
         display: none;
+    }
+    .profile{
+        margin-top: auto;
+        justify-content: center;
     }
     .sidebar{
         width: 50px;
